// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildRoutesWithViteManifest > from 0 modules 1`] = `undefined`;

exports[`buildRoutesWithViteManifest > from 1 module 1`] = `
{
  "link": [
    [
      "assets/main.css",
    ],
    [
      "assets/main.js",
      "assets/_layout.js",
      "assets/log.js",
    ],
  ],
  "mod": [
    "src/_layout.tsx",
  ],
  "path": "/",
}
`;

exports[`buildRoutesWithViteManifest > from 2 parent-child modules 1`] = `
{
  "link": [
    [
      "assets/main.css",
    ],
    [
      "assets/main.js",
      "assets/_layout.js",
      "assets/log.js",
    ],
  ],
  "mod": [
    "src/_layout.tsx",
  ],
  "path": "/",
  "tree": [
    {
      "link": [
        [],
        [
          "assets/abc-_layout.js",
          "assets/log.js",
        ],
      ],
      "mod": [
        "src/abc/_layout.tsx",
      ],
      "path": "/abc",
    },
  ],
}
`;
